Fix FoC menu position, avoid white space when no labels are present. Fix expand/collapse of cmail after a fullscreen edit.

--- a/scss/partials/_labels.scss
+++ b/scss/partials/_labels.scss
@@ -355,6 +355,10 @@ div.oc-labels-list {
   div.oc-labels-item {
     margin-right: 4px;
 
+    a:hover {
+      opacity: 0.9;
+    }
+
     div.oc-label {
       @include label();
     }
